<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/layout_root"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:padding="@dimen/view_padding" >

<TextView
    android:id="@+id/text_view_emp_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enter_information"
    android:layout_gravity="center"
    android:textSize="@dimen/text_size"
    android:textStyle="bold" />

<EditText
    android:id="@+id/editTextDialogNameInput"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enterName"/>


<EditText
    android:id="@+id/editTextDialogDateInput"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enterDate"/>

    <EditText
        android:id="@+id/editTextDialogTypeInput"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/enterType"/>

    <EditText
        android:id="@+id/editTextDialogAmountInput"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/enterAmount"/>

</LinearLayout>
